# StratMancer

./: .coverage  .gitignore  AGENTS.md  COLLECTION_FIX_SUMMARY.md  COLLECTION_SUMMARY.md  DATA_COLLECTION_AND_RETRAINING_GUIDE.md  DATA_VALIDATION_REPORT.md  Dockerfile  FIXES_APPLIED.md  FIXES_COMPLETE.md  FIX_SUMMARY.md  FRONTEND_FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MODEL_CLEANUP_GUIDE.md  POST_DRAFT_ANALYSIS_COMPLETE.md  PRODUCTION_READY.md  PROJECT_STATUS.md  PROJECT_STATUS_UPDATED.md  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  README_API.md  RETRAIN_MODEL_GUIDE.md  RICH_FEATURES_GUIDE.md  SETUP_GUIDE.md  SMART_PICK_SYSTEM.md  START_FRONTEND.md  STEP1_COMPLETE.md  STEP1_COMPLETE_SUMMARY.md  STEP2_PART1_COMPLETE.md  STEP2_PART2_COMPLETE.md  STEP2_PART3_COMPLETE.md  STEP3A_COMPLETE.md  STEP3B_COMPLETE.md  STEP3B_VERIFICATION.md  STEP3C_COMPLETE.md  STEP3C_VERIFICATION.md  (+46 more)
Scripts/: activate  activate.bat  activate.fish  jsonpointer
backend/: Dockerfile  __init__.py  config.py
backend/api/: __init__.py  deps.py  main.py  schemas.py
backend/middleware/: __init__.py  security.py
backend/services/: __init__.py  cache.py  draft_analyzer.py  draft_iq_v2.py  gemini_client.py  inference.py  meta_tracker.py  metrics.py  model_registry.py  patchnote_featurizer.py  rate_limit.py  recommender.py  scheduler.py  team_optimizer.py
data/assets/: embeddings_high.npy  embeddings_low.npy  embeddings_mid.npy  matchups_high_15.20.npz  matchups_low_15.20.npz  matchups_mid_15.20.npz  priors_high_15.20.json  priors_low_15.20.json  priors_mid_15.20.json
data/meta/: latest_low.json
data/patch_features/: meta_analysis_mid_15.20.json  patch_14.21.json
frontend/: .eslintrc.json  Dockerfile  ENV_SECURITY.md  GOOGLE_SETUP.md  README.md  SETUP.md  fix-imports-v2.js  fix-imports.js  jsconfig.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  global-loading.tsx  globals-backup.css  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: AnalysisPanel.tsx  ChampionPicker.tsx  ConfidenceIndicator.tsx  CookieConsent.tsx  DataWarning.tsx  EloSelector.tsx  ErrorBoundary.tsx  FeatureRows.tsx  Footer.tsx  Glow.tsx  GoogleSearchConsole.tsx  GoogleTagManager.tsx  Hero.tsx  HologramParticles.tsx  MetaOverview.tsx  MetaTable.tsx  MetaTrends.tsx  PatchSelector.tsx  PredictionCard.tsx  Pricing.tsx  ProductMarquee.tsx  RecommendationCard.tsx  RoleSlots.tsx  Section.tsx  SiteHeader.tsx
frontend/lib/: analytics.ts  api.ts  championImages.ts  cn.ts  cookies.ts  iqV2Api.ts  monitoring.ts  motion.ts  performance.ts  realData.ts  security.ts  structured-data.ts
frontend/public/: riot.txt
frontend/types/: index.ts
ml_pipeline/: README.md  __init__.py  feature_map.json  history_index.json  meta_utils.py  tags_overrides.yaml  test_tag_builder.py
ml_pipeline/features/: __init__.py  build_assets.py  embeddings.py  feature_engineering.py  history_index.py  matchups.py  synergy.py  tag_builder.py
ml_pipeline/models/: README.md  __init__.py  evaluate.py  predict.py  train.py
notebooks/: validation.ipynb
src/: __init__.py
src/collectors/: enhanced_collector.py  match_collector.py  puuid_cache.py
src/storage/: __init__.py  data_storage.py
src/transformers/: __init__.py  match_transformer.py  schema.py
src/utils/: config_manager.py  logging_config.py  (+2 more)
tests/: test_api_predict.py  test_draft_iq_v2_api.py  test_draft_iq_v2_format.py  test_models_registry.py  test_rate_limit.py  test_schema.py  test_security.py
(+122 files in other folders)
